--- a/lang/en.json
+++ b/lang/en.json
@@ -36,6 +36,8 @@
     "visa_app_sent": "Visa Application Submitted",
     "reference_number" : "Reference Number",
     "check_inbox": "Please, Check Your Email Inbox",
+    
+    "e_visa": "E-Visa",
 
     "details": "Details",
     "nationality": "Nationality",
