--- a/lang/fr.json
+++ b/lang/fr.json
@@ -37,6 +37,8 @@
     "reference_number" : "Numéro de réference",
     "check_inbox": "S'il vous plaît, vérifiez votre boîte de réception",
 
+    "e_visa": "E-Visa",
+
     "details": "Détails",
     "nationality": "Nationalité",
     "passport_no": "Numéro de passeport",
