contact us labels

--- a/lang/am.json
+++ b/lang/am.json
@@ -72,5 +72,9 @@
     "go_back": "ተመለስ",
     "choose_language": "የእርስዎን ተመራጭ ቋንቋ ይምረጡ",
     "restart": "መተግበሪያውን እንደገና ያስጀምሩ",
-    "restart_content": "የቋንቋ ለውጥ ለማድረግ እባክዎ መተግበሪያውን እንደገና ያስጀምሩ"
+    "restart_content": "የቋንቋ ለውጥ ለማድረግ እባክዎ መተግበሪያውን እንደገና ያስጀምሩ",
+
+    "address": "አድራሻ",
+    "whatsapp": "ዋትስአፕ",
+    "messenger": "ሜሴንጀር"
 }
