contact us break clean up

--- a/lang/en.json
+++ b/lang/en.json
@@ -108,7 +108,7 @@
     "restart": "Restart The App",
     "restart_content": "Please restart the App to undergo the language change",
 
-    "address": "Adresse",
+    "address": "Address",
     "whatsapp": "WhatsApp",
     "messenger": "Messenger"
 
