--- a/lang/fr.json
+++ b/lang/fr.json
@@ -74,7 +74,7 @@
     "restart": "Redémarrez l'application",
     "restart_content": "Veuillez redémarrer l'application pour subir le changement de langue",
 
-    "address": "Address",
+    "address": "Adresse",
     "whatsapp": "WhatsApp",
     "messenger": "Messenger"
 }
