--- a/lang/am.json
+++ b/lang/am.json
@@ -54,6 +54,7 @@
     "submit_hint": "የቅጽ መስፈርቶች ተጠናቀዋል! እባክዎ ማመልከቻዎን ያስገቡ።",
     "previous": "ተመለስ",
     "continue": "ቀጥል",
+    "checkout": "ክፍያ",
 
 
     "select_visa_type": "የቪዛ ዓይነትን ይምረጡ",
