--- a/lang/fr.json
+++ b/lang/fr.json
@@ -54,6 +54,7 @@
     "submit_hint": "Exigences du formulaire remplies ! Veuillez soumettre votre candidature.",
     "previous": "Précédent",
     "continue": "Continuer",
+    "checkout": "Checkout",
 
 
     "select_visa_type": "Sélectionnez le type de visa",
